# DENTAL_IMAGE_PROJECT

./: .gitignore  pyproject.toml
config/: config.yaml
configs/: config.yaml
notebooks/: data_preparation.ipynb  exploration.ipynb  predict.ipynb  preprocessing_and_training.ipynb  preprocessing_and_training_3classes.py
src/: data_loading.py  evaluate.py  main.py  metrics.py  model.py  train.py  utils.py
